# COMDIRAC

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  environment.yml  release.notes  setup.cfg
.github/workflows/: codestyle.yml  deployment.yml
Interfaces/: __init__.py
Interfaces/Utilities/: DCatalog.py  DCommands.py  DConfig.py  DConfigCache.py  DSession.py
Interfaces/scripts/: dcd.py  dchgrp.py  dchmod.py  dchown.py  dconfig.py  dfind.py  dget.py  dgetenv.py  dinit.py  dinput.py  djobs.py  dkill.py  dlogging.py  dls.py  dmeta.py  dmkdir.py  doutput.py  dput.py  dpwd.py  drepl.py  dreplicas.py  drm.py  drmdir.py  dsetenv.py  dsize.py  dstat.py  dsub.py  dsubmit.py  dunsetenv.py
src/COMDIRAC/: __init__.py
src/COMDIRAC/Interfaces/: __init__.py
src/COMDIRAC/Interfaces/Utilities/: DCommands.py  DConfigCache.py
src/COMDIRAC/Interfaces/scripts/: dcd.py  dchgrp.py  dchmod.py  dchown.py  dconfig.py  dfind.py  dget.py  dgetenv.py  dinit.py  dinput.py  dkill.py  dlogging.py  dls.py  dmeta.py  dmkdir.py  doutput.py  dput.py  dpwd.py  drepl.py  dreplicas.py  drm.py  drmdir.py  dsetenv.py  dsize.py  dstat.py  dsub.py  dunsetenv.py
