###############################################################################
# Setuptools
###############################################################################

[metadata]
name = COMDIRAC
description = Package to supply a comprehensive list of UNIX-like commands for the DIRAC user interface
long_description = file: README.rst
url = https://github.com/DIRACGrid/COMDIRAC
license = GPL-3.0-only
license_files = file: LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
install_requires =
    DIRAC ~= 8.0.0a14
zip_safe = False
include_package_data = True

[options.package_data]

[options.packages.find]
where=src

[options.extras_require]
server =
    DIRAC[server]
testing =
    mock
    pytest

[options.entry_points]
dirac =
    metadata = COMDIRAC:extension_metadata
# For details on adding additional scripts see
# https://dirac.readthedocs.io/en/integration/DeveloperGuide/AddingNewComponents/DevelopingCommands/index.html
console_scripts =
    # Interfaces
    dcd = COMDIRAC.Interfaces.scripts.dcd:main
    dchgrp = COMDIRAC.Interfaces.scripts.dchgrp:main
    dchmod = COMDIRAC.Interfaces.scripts.dchmod:main
    dchown = COMDIRAC.Interfaces.scripts.dchown:main
    dconfig = COMDIRAC.Interfaces.scripts.dconfig:main
    dfind = COMDIRAC.Interfaces.scripts.dfind:main
    dget = COMDIRAC.Interfaces.scripts.dget:main
    dgetenv = COMDIRAC.Interfaces.scripts.dgetenv:main
    dinit = COMDIRAC.Interfaces.scripts.dinit:main
    dinput = COMDIRAC.Interfaces.scripts.dinput:main
    dkill = COMDIRAC.Interfaces.scripts.dkill:main
    dlogging = COMDIRAC.Interfaces.scripts.dlogging:main
    dls = COMDIRAC.Interfaces.scripts.dls:main
    dmeta = COMDIRAC.Interfaces.scripts.dmeta:main
    dmkdir = COMDIRAC.Interfaces.scripts.dmkdir:main
    doutput = COMDIRAC.Interfaces.scripts.doutput:main
    dput = COMDIRAC.Interfaces.scripts.dput:main
    dpwd = COMDIRAC.Interfaces.scripts.dpwd:main
    drepl = COMDIRAC.Interfaces.scripts.drepl:main
    dreplicas = COMDIRAC.Interfaces.scripts.dreplicas:main
    drm = COMDIRAC.Interfaces.scripts.drm:main
    drmdir = COMDIRAC.Interfaces.scripts.drmdir:main
    dsetenv = COMDIRAC.Interfaces.scripts.dsetenv:main
    dsize = COMDIRAC.Interfaces.scripts.dsize:main
    dstat = COMDIRAC.Interfaces.scripts.dstat:main
    dsub = COMDIRAC.Interfaces.scripts.dsub:main
    dunsetenv = COMDIRAC.Interfaces.scripts.dunsetenv:main

###############################################################################
# Linting
###############################################################################

[pycodestyle]
# Pep8 codes:
# E203 - Whitespace before ':' (spaces should be present for list slices)
# E211 - Whitespace before '(' (black incorrectly formats exec when in Python 2 mode)
# E266 - Too many leading '#' for block comment
# E402 - module level import not at top of file (for scripts)
# W503 - line break before binary operator (stupid, complains after or before...)
ignore = E203, E211, E266, E402, W503
# TODO: This should be reduced back to 120 at some point
max_line_length=130
